fixed mobile description overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -83,6 +83,7 @@
     position: relative;
     padding: 20px;
     max-width: 800px;
+    max-height: 90%;
     background: lightcoral;
     color: white;
     border: 2px solid white;
@@ -96,7 +97,9 @@
     .modal-info__description {
       margin: 0;
       padding: 15px;
+      max-height: 200px;
       border-bottom: 1px solid white;
+      overflow-y: scroll;
     }
     .modal-info__authors {
       margin: 0;
@@ -125,6 +128,19 @@
     .close-modal {
       background: white;
       color: lightcoral;
+    }
+
+    ::-webkit-scrollbar {
+      width: 5px;
+    }
+    ::-webkit-scrollbar-track {
+      background: white;
+    }
+    ::-webkit-scrollbar-thumb {
+      background: #d07070;
+    }
+    ::-webkit-scrollbar-thumb:hover {
+      background: #555;
     }
   }
   ::selection {
